<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E7E3">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="125dp"
        android:orientation="vertical"
        android:background="#A39165"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/listofimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="40dp"
            android:text="@string/preview"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="666dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:background="#C7C0A7"
            android:text="@string/back"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="666dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:background="#C7C0A7"
            android:text="@string/retake"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>