<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E7E3" >

    <LinearLayout
        android:id="@+id/layoutmark"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="582dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/m_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/mark"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listofimage"
        android:layout_width="413dp"
        android:layout_height="125dp"
        android:background="#A39165"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <TextView
            android:id="@+id/listofimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="40dp"
            android:text="@string/list_of_image"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutls"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="136dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sideoffoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/left_sole"
            android:textColor="#676151"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutpreview"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="136dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/pv_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/preview"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmark"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="136dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/m_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/mark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttomconfirm"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:background="#e9e7e3"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="671dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/confirm"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="#C7C0A7"
            android:text="@string/confirm" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutrs"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sideoffoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/right_sole"
            android:textColor="#676151"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutpreview"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="225dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/pv_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/preview" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmark"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="225dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/m_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/mark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutlm"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="315dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sideoffoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/left_medial"
            android:textColor="#676151"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutpreview"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="315dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/pv_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/preview"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmark"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="315dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/m_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/mark"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutrm"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sideoffoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/right_medial"
            android:textColor="#676151"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutpreview"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/pv_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/preview"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmark"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/m_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/mark"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutll"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="493dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sideoffoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/left_lateral"
            android:textColor="#676151"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutpreview"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="493dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/pv_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/preview"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmark"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#B3C2B89F"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="493dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/m_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/mark"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutrl"
        android:layout_width="200dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="583dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sideoffoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/right_lateral"
            android:textColor="#676151"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutpreview"
        android:layout_width="90dp"
        android:layout_height="89dp"
        android:background="#80EADFBA"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="582dp"
        tools:ignore="DuplicateIds,MissingConstraints">

        <Button
            android:id="@+id/pv_rl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/box2"
            android:text="@string/preview" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>